Ensure text remains visible during webfont load

--- a/src/global.scss
+++ b/src/global.scss
@@ -33,9 +33,11 @@ ion-datetime {
 @font-face {
     font-family: "Cooper Hewitt";
     src: url("assets/fonts/CooperHewitt-Medium.otf") format("opentype");
+    font-display: swap
 }
 
 @font-face {
     font-family: "Suarez Alt";
     src: url("assets/fonts/Suarez-Alt.otf") format("opentype");
+    font-display: swap
 }
